--- a/server/tsconfig.json
+++ b/server/tsconfig.json
@@ -5,6 +5,7 @@
 		"lib": ["dom", "es6", "es2017", "esnext.asynciterable"],
 		"sourceMap": true,
 		"outDir": "./dist",
+		"skipLibCheck": true,
 		"moduleResolution": "node",
 		"removeComments": true,
 		"noImplicitAny": true,
