--- a/.gitignore
+++ b/.gitignore
@@ -4,16 +4,13 @@ yarn-error.log
 
 .pnp
 .pnp.js
-coverage
-# next.js
 .next/
-out/
-# production
-build
-# misc
 .DS_Store
+coverage
+out/
+next-env.d.ts
+build
 *.pem
-# debug
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
