--- a/server/package.json
+++ b/server/package.json
@@ -6,8 +6,7 @@
 	"scripts": {
 		"watch": "tsc -w",
 		"dev": "nodemon --exec ts-node src/index.ts",
-		"start": "node dist/index.js",
-		"create:migration": "mikro-orm migration:create"
+		"start": "node dist/index.js"
 	},
 	"devDependencies": {
 		"@types/connect-redis": "^0.0.16",
@@ -22,10 +21,6 @@
 		"typescript": "^4.2.2"
 	},
 	"dependencies": {
-		"@mikro-orm/cli": "^4.4.4",
-		"@mikro-orm/core": "^4.4.4",
-		"@mikro-orm/migrations": "^4.4.4",
-		"@mikro-orm/postgresql": "^4.4.4",
 		"apollo-server-express": "^2.21.0",
 		"argon2": "^0.27.1",
 		"class-validator": "^0.13.1",
@@ -38,6 +33,7 @@
 		"nodemailer": "^6.5.0",
 		"pg": "^8.5.1",
 		"type-graphql": "^1.1.1",
+		"typeorm": "^0.2.31",
 		"uuid": "^8.3.2"
 	},
 	"mikro-orm": {
