--- a/server/package.json
+++ b/server/package.json
@@ -4,6 +4,7 @@
 	"main": "index.js",
 	"license": "MIT",
 	"scripts": {
+		"build": "tsc",
 		"watch": "tsc -w",
 		"dev": "nodemon --exec ts-node src/index.ts",
 		"start": "node dist/index.js"
@@ -27,6 +28,7 @@
 		"connect-redis": "^5.1.0",
 		"cors": "^2.8.5",
 		"dataloader": "^2.0.0",
+		"dotenv-safe": "^8.2.0",
 		"express": "^4.17.1",
 		"express-session": "^1.17.1",
 		"graphql": "^15.5.0",
